@@ -1,3 +1,8 @@
+2006-04-28  Alan Modra  <amodra@bigpond.net.au>
+
+	* dwarf2dbg.c (get_line_subseg): Attach new struct line_seg to end
+	of list rather than beginning.
+
 2006-04-26  Julian Brown  <julian@codesourcery.com>
 
 	* gas/config/tc-arm.c (neon_is_quarter_float): Move, and rename to...
